tests/lean/t9.lean.expected.out
add a (mul b a) : N
t9.lean:16:7: error: invalid expression
add a (mul b a) : N
